story gap fix

--- a/src/app/combat/combat.component.scss
+++ b/src/app/combat/combat.component.scss
@@ -50,6 +50,7 @@
   display: flex;
   flex-direction: column;
 
+
   ion-card {
     height: 100%;
     display: flex;
@@ -60,7 +61,7 @@
     flex: 1;
     overflow-y: auto;
     padding: 0.5rem;
-    max-height: 300px;
+    height: 100%;
   }
 
   p {
